minikube/growvia-kibana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: growvia-kibana
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: growvia-kibana
  template:
    metadata:
      labels:
        app: growvia-kibana
    spec:
      containers:
        - name: growvia-kibana
          image: docker.elastic.co/kibana/kibana:8.18.0
          resources:
            limits:
              memory: "1Gi"
              cpu: "1250m"
            requests:
              cpu: 250m
              # memory: 1Gi
              memory: 500Mi
          ports:
            - name: growvia-kibana
              containerPort: 5601    
          volumeMounts:
            - name: kibana-config
              mountPath: /usr/share/kibana/config
      volumes:
      #this must much name from volumeMounts (above)
      - name: kibana-config 
        configMap:
        #this must match configMap.yaml name (in this situation is the same as volumeMount)
          name: kibana-config
