minikube/growvia-kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: growvia-kibana
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: growvia-kibana
  ports:
  - name: growvia-kibana
    port: 5601
    targetPort: 5601
    protocol: TCP
